# requests-unixsocket

./: .gitignore  .python-version  .travis.yml  Makefile  README.rst  Vagrantfile  pyproject.toml  requirements.txt  sample.py  setup.cfg  setup.py  test-requirements.txt  timeout_socket_server.py  tox.ini
.github/actions/cache-keys/: action.yml
.github/reusables/tox-dev/workflow/reusable-tox/hooks/post-src-checkout/: action.yml
.github/reusables/tox-dev/workflow/reusable-tox/hooks/prepare-for-tox-run/: action.yml
.github/workflows/: ci-cd.yml  scheduled-runs.yml  tests.yml
examples/: abstract_namespace.py  docker-info-alt2.py  docker-info.py  simple-http.py
requests_unixsocket/: __init__.py  adapters.py  settings.py  testutils.py
requests_unixsocket/tests/: test_requests_unixsocket.py
