[metadata]
name = requests-unixsocket
author = Marc Abramowitz
author_email = marc@marc-abramowitz.com
summary = Use requests to talk HTTP via a UNIX domain socket
description_file = README.rst
license = Apache-2
home_page = https://github.com/msabramo/requests-unixsocket
# home_page = https://requests-unixsocket.readthedocs.org/
classifier =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
test_suite = requests_unixsocket.tests

[files]
packages = requests_unixsocket

[wheel]
universal = 1
