[metadata]
name = requests-unixsocket
author = Marc Abramowitz
author_email = marc@marc-abramowitz.com
summary = Use requests to talk HTTP via a UNIX domain socket
description_file = README.rst
license = Apache-2
home_page = https://github.com/msabramo/requests-unixsocket
# home_page = https://requests-unixsocket.readthedocs.org/
classifier =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
test_suite = requests_unixsocket.tests
python_requires = >= 3.9

[files]
packages = requests_unixsocket

[wheel]
universal = 1
